--- a/index.html
+++ b/index.html
@@ -54,38 +54,13 @@
   </head>
 
   <body class="font-sora">
-    <header class="mb-28 mt-6">
+    <header class="mb-28 py-3 lg:mt-6 lg:border-none lg:py-0 border-solid border-b border-primary">
       <nav>
         <!-- nav -->
         <div class="navbar max-w-[1320px] mx-auto">
           <div class="navbar-start">
-            <div class="dropdown">
-              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4 6h16M4 12h8m-8 6h16"
-                  />
-                </svg>
-              </div>
-              <ul
-                tabindex="0"
-                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
-              >
-                <li><a>Product</a></li>
-                <li><a>Services</a></li>
-                <li><a>Contact Us</a></li>
-              </ul>
-            </div>
-            <img class="" src="c2-assets/logo-header.png" alt="" />
+            <img class="hidden lg:block" src="c2-assets/logo-header.png" alt="" />
+            <img src="c2-assets/logo-phone.png" alt="">
           </div>
           <!-- menu -->
           <div class="navbar-center hidden lg:flex">
@@ -96,13 +71,40 @@
             </ul>
           </div>
           <div class="navbar-end gap-5">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                    class="text-primary text-xl"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 right-0 shadow"
+              >
+                <li><a>Product</a></li>
+                <li><a>Services</a></li>
+                <li><a>Contact Us</a></li>
+              </ul>
+            </div>
             <!-- icons -->
-            <div class="space-x-3 text-2xl">
+            <div class="hidden space-x-3 text-2xl lg:block">
               <i class="fa-solid fa-magnifying-glass"></i>
               <i class="fa-solid fa-cart-shopping"></i>
             </div>
             <!-- buttons -->
-            <div class="space-x-2">
+            <div class="space-x-2 hidden lg:block">
               <button class="btn bg-white w-28">Login</button>
               <button class="btn bg-primary text-white w-28">Register</button>
             </div>
