--- a/index.html
+++ b/index.html
@@ -54,13 +54,19 @@
   </head>
 
   <body class="font-sora">
-    <header class="mb-28 py-3 lg:mt-6 lg:border-none lg:py-0 border-solid border-b border-primary">
+    <header
+      class="lg:mb-28 py-3 lg:mt-6 lg:border-none lg:py-0 border-solid border-b border-primary absolute w-full"
+    >
       <nav>
         <!-- nav -->
         <div class="navbar max-w-[1320px] mx-auto">
           <div class="navbar-start">
-            <img class="hidden lg:block" src="c2-assets/logo-header.png" alt="" />
-            <img src="c2-assets/logo-phone.png" alt="">
+            <img
+              class="hidden lg:block"
+              src="c2-assets/logo-header.png"
+              alt=""
+            />
+            <img class="lg:hidden" src="c2-assets/logo-phone.png" alt="" />
           </div>
           <!-- menu -->
           <div class="navbar-center hidden lg:flex">
@@ -113,7 +119,27 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <!-- hero section -->
+      <section>
+        <div class="hero bg-gradient-to-b from-white to-secondary min-h-screen">
+          <div class="hero-content text-center flex-col self-end pb-0">
+            <div class="max-w-96">
+              <h1 class="text-[32px] font-bold">
+                Freshness <span class="text-primary">You Can Count</span> On,
+                Prices <br />
+                You’ll Love!
+              </h1>
+              <p class="py-6">
+                Shop your daily essentials at unbeatable prices. From fresh
+                produce to pantry staples, we’ve got you covered every day!
+              </p>
+            </div>
+            <img src="c2-assets/hero-vegetables.png" alt="">
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
