Service section mobile

--- a/index.html
+++ b/index.html
@@ -149,6 +149,67 @@
           </div>
         </div>
       </section>
+
+      <!-- services section -->
+      <section class="max-w-full">
+        <div class="hero">
+          <div class="hero-content text-center flex-col self-end">
+            <h2
+              class="w-full text-2xl text-left text-primary font-bold lg:text-[56px] pt-10"
+            >
+              Services
+            </h2>
+            <!-- card container -->
+            <div class="grid gap-6">
+              <!-- card 1 -->
+              <div class="card bg-secondary">
+                <figure class="px-10 pt-10">
+                  <div class="p-5 bg-white rounded-full">
+                    <img src="c2-assets/service.png" class="" />
+                  </div>
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title font-bold text-xl">24/7 Services</h2>
+                  <p>
+                    We're here for you, round the clock, ensuring fresh
+                    vegetables whenever you need them
+                  </p>
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div class="card bg-secondary">
+                <figure class="px-10 pt-10">
+                  <div class="p-5 bg-white rounded-full">
+                    <img src="c2-assets/delivery.png" class="" />
+                  </div>
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title font-bold text-xl">Fast Delivery</h2>
+                  <p>
+                    Speedy delivery straight to your doorstep so you never run
+                    out of fresh produce
+                  </p>
+                </div>
+              </div>
+              <!-- card 3 -->
+              <div class="card bg-secondary">
+                <figure class="px-10 pt-10">
+                  <div class="p-5 bg-white rounded-full">
+                    <img src="c2-assets/healthy.png" class="" />
+                  </div>
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title font-bold text-xl">Healthy Products</h2>
+                  <p>
+                    Our vegetables are farm-fresh, packed with nutrients, and
+                    carefully selected for your health
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
