--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
       </section>
 
       <!-- services section -->
-      <section class="max-w-full">
+      <section class="max-w-full py-10  lg:py-16">
         <div class="hero">
           <div class="hero-content text-center flex-col self-end">
             <h2
-              class="w-full text-2xl text-left text-primary font-bold lg:text-[56px] pt-10"
+              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
             >
               Services
             </h2>
             <!-- card container -->
-            <div class="grid gap-6">
+            <div class="grid gap-6 lg:grid-cols-3">
               <!-- card 1 -->
               <div class="card bg-secondary">
                 <figure class="px-10 pt-10">
