broken product section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
 
       <!-- services section -->
-      <section class="max-w-full py-10  lg:py-16">
+      <section class="max-w-full py-10 lg:py-16">
         <div class="hero">
           <div class="hero-content text-center flex-col self-end">
             <h2
@@ -210,6 +210,78 @@
           </div>
         </div>
       </section>
+
+      <!-- products section -->
+      <section class="max-w-full bg-secondary py-10 lg:py-16">
+        <div class="hero">
+          <div class="hero-content text-center flex-col self-end">
+            <h2
+              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
+            >
+              Popular Products
+            </h2>
+            <!-- all cards container -->
+            <div class="flex flex-col">
+              <!-- big card -->
+              <!-- bg-linear-65 from-primary to-pink-500 -->
+              <div class="card min-h-80 bg-primary">
+                <div class="card-body text-left">
+                  <h2 class="card-title text-white font-bold text-2xl">
+                    30% off
+                  </h2>
+                  <p>
+                    Discover a world of treats, toys, and essentials handpicked
+                    for
+                  </p>
+                  <div class="card-actions">
+                    <button class="btn bg-white text-xl w-32">Buy Now</button>
+                    <figure class="px-10 pt-10">
+                      <div class="p-5 bg-white rounded-full">
+                        <img src="c2-assets/service.png" class="" />
+                      </div>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+              <!-- card container -->
+              <div class="grid gap-2 grid-cols-2 lg:grid-cols-3">
+                <!-- card 1 -->
+                <div class="card flex-row bg-white rounded-lg">
+                  <figure class="">
+                    <div class="p-2 bg-secondary rounded">
+                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                    </div>
+                  </figure>
+                  <div class="flex flex-col items-center text-center">
+                    <h2 class="card-title font-bold text-xl">24/7 Services</h2>
+                    <p>
+                      We're here for you, round the clock, ensuring fresh
+                      vegetables whenever you need them
+                    </p>
+                  </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card bg-secondary">
+                  <figure class="px-10 pt-10">
+                    <div class="p-5 bg-white rounded-full">
+                      <img src="c2-assets/delivery.png" class="" />
+                    </div>
+                  </figure>
+                  <div class="card-body items-center text-center">
+                    <h2 class="card-title font-bold text-xl">Fast Delivery</h2>
+                    <p>
+                      Speedy delivery straight to your doorstep so you never run
+                      out of fresh produce
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
 
     <footer></footer>
