--- a/index.html
+++ b/index.html
@@ -281,7 +281,65 @@
         </div>
       </section>
 
-      
+      <!-- offer section -->
+      <section class="max-w-full py-10 lg:py-16">
+        <div class="hero">
+          <div class="hero-content w-full flex-col self-end">
+            <h2
+              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
+            >
+              Arrival & Offers
+            </h2>
+            <!-- card container -->
+            <div class="flex flex-col gap-4 w-full">
+              <!-- card 1 -->
+              <div
+                class="flex bg-[#115414] w-full pl-4 py-6 rounded-2xl justify-between"
+              >
+                <!-- content -->
+                <div class="flex flex-col justify-center gap-2 items-start">
+                  <img src="c2-assets/dawat-logo.png" alt="" class="w-32" />
+                  <h4
+                    class="text-white text-sm font-light px-3 w-fit py-2 mt-4 rounded-lg bg-[#63B76D]"
+                  >
+                    Cook Exotic Dishes
+                  </h4>
+                  <h3 class="text-xl text-white pt-2">
+                    Up to <span class="font-bold">20% OFF</span>
+                  </h3>
+                </div>
+                <img src="c2-assets/dawat-mock-up.png" alt="" class="w-48" />
+              </div>
+              <!-- card 2 -->
+              <div
+                class="flex bg-[#102861] w-full pl-4 py-6 rounded-2xl justify-between"
+              >
+                <!-- content -->
+                <div class="flex flex-col justify-center gap-2 items-start">
+                  <img
+                    src="c2-assets/india-gate-logo.png"
+                    alt=""
+                    class="w-14"
+                  />
+                  <h4
+                    class="text-white text-sm font-light px-3 w-fit py-2 rounded-lg bg-[#2a4d97]"
+                  >
+                    World’s No.1 Rice
+                  </h4>
+                  <h3 class="text-xl text-white pt-2">
+                    Up to <span class="font-bold">40% OFF</span>
+                  </h3>
+                </div>
+                <img
+                  src="c2-assets/india-gate-mock-up.png"
+                  alt=""
+                  class="w-28 mr-8"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
