--- a/index.html
+++ b/index.html
@@ -291,49 +291,49 @@
               Arrival & Offers
             </h2>
             <!-- card container -->
-            <div class="flex flex-col gap-4 w-full">
+            <div class="flex flex-col lg:flex-row gap-4 w-full">
               <!-- card 1 -->
               <div
-                class="flex bg-[#115414] w-full pl-4 py-6 rounded-2xl justify-between"
+                class="flex bg-[#115414] w-full lg:w-[55%] pl-4 py-6 lg:pl-10 rounded-2xl justify-between"
               >
                 <!-- content -->
                 <div class="flex flex-col justify-center gap-2 items-start">
-                  <img src="c2-assets/dawat-logo.png" alt="" class="w-32" />
+                  <img src="c2-assets/dawat-logo.png" alt="" class="w-32 lg:w-56" />
                   <h4
-                    class="text-white text-sm font-light px-3 w-fit py-2 mt-4 rounded-lg bg-[#63B76D]"
+                    class="text-white text-sm lg:text-2xl font-light px-3 w-fit py-2 mt-4 rounded-lg bg-[#63B76D]"
                   >
                     Cook Exotic Dishes
                   </h4>
-                  <h3 class="text-xl text-white pt-2">
+                  <h3 class="text-xl lg:text-4xl text-white pt-2">
                     Up to <span class="font-bold">20% OFF</span>
                   </h3>
                 </div>
-                <img src="c2-assets/dawat-mock-up.png" alt="" class="w-48" />
+                <img src="c2-assets/dawat-mock-up.png" alt="" class="w-48 lg:w-72" />
               </div>
               <!-- card 2 -->
               <div
-                class="flex bg-[#102861] w-full pl-4 py-6 rounded-2xl justify-between"
+                class="flex bg-[#102861] w-full lg:w-[45%] pl-4 py-6 lg:pl-10 rounded-2xl justify-between"
               >
                 <!-- content -->
                 <div class="flex flex-col justify-center gap-2 items-start">
                   <img
                     src="c2-assets/india-gate-logo.png"
                     alt=""
-                    class="w-14"
+                    class="w-14 lg:w-20"
                   />
                   <h4
-                    class="text-white text-sm font-light px-3 w-fit py-2 rounded-lg bg-[#2a4d97]"
+                    class="text-white text-sm lg:text-2xl font-light px-3 w-fit py-2 rounded-lg bg-[#2a4d97]"
                   >
                     World’s No.1 Rice
                   </h4>
-                  <h3 class="text-xl text-white pt-2">
+                  <h3 class="text-xl lg:text-4xl text-white pt-2">
                     Up to <span class="font-bold">40% OFF</span>
                   </h3>
                 </div>
                 <img
                   src="c2-assets/india-gate-mock-up.png"
                   alt=""
-                  class="w-28 mr-8"
+                  class="w-28 mr-8 lg:w-40"
                 />
               </div>
             </div>
