--- a/index.html
+++ b/index.html
@@ -298,7 +298,11 @@
               >
                 <!-- content -->
                 <div class="flex flex-col justify-center gap-2 items-start">
-                  <img src="c2-assets/dawat-logo.png" alt="" class="w-32 lg:w-56" />
+                  <img
+                    src="c2-assets/dawat-logo.png"
+                    alt=""
+                    class="w-32 lg:w-56"
+                  />
                   <h4
                     class="text-white text-sm lg:text-2xl font-light px-3 w-fit py-2 mt-4 rounded-lg bg-[#63B76D]"
                   >
@@ -308,7 +312,11 @@
                     Up to <span class="font-bold">20% OFF</span>
                   </h3>
                 </div>
-                <img src="c2-assets/dawat-mock-up.png" alt="" class="w-48 lg:w-72" />
+                <img
+                  src="c2-assets/dawat-mock-up.png"
+                  alt=""
+                  class="w-48 lg:w-72"
+                />
               </div>
               <!-- card 2 -->
               <div
@@ -342,6 +350,32 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="">
+      <!-- footer -->
+      <div class="footer bg-primary text-white text-base-content p-10">
+        <aside class="space-y-2">
+          <img src="c2-assets/logo-footer.png" alt="" class="w-24" />
+          <p>
+            Discover a world of treats, toys, and essentials handpicked for your
+            furry friends
+          </p>
+        </aside>
+        <nav>
+          <a class="link link-hover">Product</a>
+          <a class="link link-hover">Services</a>
+          <a class="link link-hover">Contact Us</a>
+        </nav>
+        <nav>
+          <p>Follow Us</p>
+          <!-- icons -->
+          <div class="flex gap-5 text-2xl">
+            <a href="/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="/"><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
