--- a/index.html
+++ b/index.html
@@ -352,29 +352,33 @@
 
     <footer class="">
       <!-- footer -->
-      <div class="footer bg-primary text-white text-base-content p-10">
-        <aside class="space-y-2">
-          <img src="c2-assets/logo-footer.png" alt="" class="w-24" />
-          <p>
-            Discover a world of treats, toys, and essentials handpicked for your
-            furry friends
-          </p>
-        </aside>
-        <nav>
-          <a class="link link-hover">Product</a>
-          <a class="link link-hover">Services</a>
-          <a class="link link-hover">Contact Us</a>
-        </nav>
-        <nav>
-          <p>Follow Us</p>
-          <!-- icons -->
-          <div class="flex gap-5 text-2xl">
-            <a href="/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="/"><i class="fa-brands fa-youtube"></i></a>
-          </div>
-        </nav>
+      <div class="bg-primary">
+        <div
+          class="footer text-white lg:text-xl text-base-content p-10 lg:py-32 lg:max-w-[1320px] lg:mx-auto lg:grid-cols-5"
+        >
+          <aside class="space-y-2 lg:col-span-2">
+            <img src="c2-assets/logo-footer.png" alt="" class="w-24 lg:w-36" />
+            <p class="w-9/12">
+              Discover a world of treats, toys, and essentials handpicked for
+              your furry friends
+            </p>
+          </aside>
+          <nav class="lg:col-span-2 lg:flex lg:flex-col lg:h-full lg:items-stretch">
+            <a class="link link-hover lg:flex-grow">Product</a>
+            <a class="link link-hover lg:flex-grow">Services</a>
+            <a class="link link-hover">Contact Us</a>
+          </nav>
+          <nav class="self-end">
+            <p>Follow Us</p>
+            <!-- icons -->
+            <div class="flex gap-5 text-2xl">
+              <a href="/"><i class="fa-brands fa-facebook"></i></a>
+              <a href="/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="/"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </nav>
+        </div>
       </div>
     </footer>
   </body>
