--- a/index.html
+++ b/index.html
@@ -217,38 +217,38 @@
       <!-- products section -->
       <section class="max-w-full bg-secondary py-10 lg:py-16">
         <div class="hero">
-          <div class="hero-content text-left flex-col self-end">
+          <div class="hero-content text-left flex-col self-end lg:w-full">
             <h2
               class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
             >
               Popular Products
             </h2>
             <!-- all cards container -->
-            <div class="flex flex-col gap-4">
+            <div class="flex flex-col lg:flex-row gap-4 lg:w-full">
               <!-- big card -->
               <!-- bg-linear-65 from-primary to-pink-500 -->
-              <div class="card special-bg min-h-80 bg-linear-65 from-primary to-white">
-                <div class="pl-6 pt-6 text-left flex flex-col gap-3">
+              <div class="card special-bg min-h-80 lg:w-2/5 lg:min-h-[400px] bg-linear-65 from-primary to-white">
+                <div class="pl-6 pt-6 lg:pl-10 lg:pt-10 text-left flex flex-col gap-3">
                   <h2 class="card-title text-white font-bold text-2xl">
                     30% off
                   </h2>
-                  <p class="text-white">
+                  <p class="text-white lg:w-9/12">
                     Discover a world of treats, toys, and essentials handpicked
                     for
                   </p>
                   <div class="card-actions">
-                    <button class="btn bg-white text-xl w-32">Buy Now</button>
+                    <button class="btn bg-white text-xl w-32 lg:w-40">Buy Now</button>
                   </div>
                   <figure
                     class="w-full flex justify-end"
                     style="justify-content: flex-end"
                   >
-                    <img src="c2-assets/vegetable-offer.png" class="w-fit" />
+                    <img src="c2-assets/vegetable-offer.png" class="w-fit lg:absolute lg:bottom-0" />
                   </figure>
                 </div>
               </div>
               <!-- card container -->
-              <div class="grid gap-4 grid-cols-2 lg:grid-cols-3">
+              <div class="grid gap-4 grid-cols-2 lg:grid-cols-3 lg:w-3/4">
                 <!-- card 1 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
@@ -385,6 +385,25 @@
                 <!-- card 2 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
+                >
+                  <figure class="">
+                    <div class="p-2 bg-secondary rounded">
+                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                    </div>
+                  </figure>
+                  <div class="flex flex-col items-start text-left h-full">
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
+                      ><span class="text-black pl-1 text-xs font-light"
+                        >4.5</span
+                      ></i
+                    >
+                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
+                    <p class="text-xs">$39.99</p>
+                  </div>
+                </div>
+                <!-- card 2 -->
+                <div
+                  class="card flex-row bg-white rounded-lg p-3 gap-3 items-center hidden lg:flex"
                 >
                   <figure class="">
                     <div class="p-2 bg-secondary rounded">
