--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <div class="flex flex-col lg:flex-row gap-4 lg:w-full">
               <!-- big card -->
               <!-- bg-linear-65 from-primary to-pink-500 -->
-              <div class="card special-bg min-h-80 lg:w-2/5 lg:min-h-[400px] bg-linear-65 from-primary to-white">
-                <div class="pl-6 pt-6 lg:pl-10 lg:pt-10 text-left flex flex-col gap-3">
+              <div class="card special-bg min-h-80 lg:w-2/5 lg:min-h-[350px] bg-linear-65 from-primary to-white">
+                <div class="pl-6 pt-6 text-left flex flex-col gap-3">
                   <h2 class="card-title text-white font-bold text-2xl">
                     30% off
                   </h2>
