subscribe section responsive

--- a/index.html
+++ b/index.html
@@ -506,30 +506,32 @@
 
     <footer class="">
       <!-- Subscribe section -->
-      <section class="px-4 -mb-[280px]">
-        <div class="card bg-secondary">
-          <figure class="px-10 pt-10">
+      <section class="px-4 -mb-[280px] lg:-mb-[200px] lg:max-w-[1320px]">
+        <div class="card lg:justify-center lg:py-10 lg:flex-row bg-secondary">
+          <figure class="px-10 pt-10 lg:w-1/2">
             <img
               src="c2-assets/vegetable-busket.png"
               alt="Shoes"
-              class="rounded-xl"
+              class="rounded-xl  lg:w-96"
             />
           </figure>
-          <div class="card-body items-center text-center gap-5">
-            <h2 class="card-title text-primary text-2xl font-bold">
+          <div
+            class="card-body items-center text-center gap-5 lg:justify-center lg:text-left lg:items-start lg:w-1/2"
+          >
+            <h2 class="card-title text-primary lg:text-black text-2xl lg:text-4xl font-bold">
               Get Grocery News!
             </h2>
-            <p>Exclusive training tips, ticks, product deals and more.</p>
+            <p class="flex-grow-0 lg:text-xl">
+              Exclusive training tips, ticks, product deals and more.
+            </p>
 
-            <div class="card-actions gap-5 w-full justify-center">
+            <div class="card-actions gap-5 w-full lg:w-fit justify-center lg:justify-start">
               <input
                 type="text"
                 placeholder="Enter Email"
-                class="input w-full max-w-xs"
+                class="input w-full"
               />
-              <button
-                class="btn bg-primary text-white w-36 font-normal"
-              >
+              <button class="btn bg-primary text-white w-36 font-normal">
                 Subscribe
               </button>
             </div>
@@ -537,7 +539,7 @@
         </div>
       </section>
       <!-- footer -->
-      <div class="bg-primary pt-[280px]">
+      <div class="bg-primary pt-[280px] lg:pt-[200px]">
         <div
           class="footer text-white lg:text-xl text-base-content p-10 lg:py-32 lg:max-w-[1320px] lg:mx-auto lg:grid-cols-5"
         >
