--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
       .special-bg {
         background: linear-gradient(135deg, #53db3a 0%, white 100%);
       }
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .fade-in-up {
+        animation: fadeInUp .4s ease-out forwards;
+      }
+      @keyframes fadeInScale {
+        from {
+          opacity: 0;
+          transform: scale(0.8);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+      .fade-in-scale {
+        animation: fadeInScale .4s ease-out forwards;
+      }
     </style>
   </head>
 
@@ -130,7 +156,7 @@
         >
           <div class="hero-content text-center flex-col self-end pb-0">
             <div class="max-w-96 lg:max-w-[827px]">
-              <h1 class="text-[32px] font-bold lg:text-[56px]">
+              <h1 class="text-[32px] font-bold lg:text-[56px] fade-in-up">
                 Freshness
                 <span class="text-primary"
                   >You Can<br class="hidden lg:block" />
@@ -147,7 +173,7 @@
             <img
               src="c2-assets/hero-vegetables.png"
               alt=""
-              class="lg:max-w-5xl"
+              class="lg:max-w-5xl fade-in-scale"
             />
           </div>
         </div>
@@ -158,7 +184,7 @@
         <div class="hero">
           <div class="hero-content text-center flex-col self-end">
             <h2
-              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
+              class="w-full fade-in-scale text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
             >
               Services
             </h2>
@@ -219,7 +245,7 @@
         <div class="hero">
           <div class="hero-content text-left flex-col self-end lg:w-full">
             <h2
-              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
+              class="w-full fade-in-scale text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
             >
               Popular Products
             </h2>
@@ -440,7 +466,7 @@
         <div class="hero">
           <div class="hero-content w-full flex-col self-end">
             <h2
-              class="w-full text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
+              class="w-full fade-in-scale text-2xl text-left text-primary font-bold lg:text-3xl lg:pb-5"
             >
               Arrival & Offers
             </h2>
@@ -512,20 +538,24 @@
             <img
               src="c2-assets/vegetable-busket.png"
               alt="Shoes"
-              class="rounded-xl  lg:w-96"
+              class="rounded-xl lg:w-96"
             />
           </figure>
           <div
             class="card-body items-center text-center gap-5 lg:justify-center lg:text-left lg:items-start lg:w-1/2"
           >
-            <h2 class="card-title text-primary lg:text-black text-2xl lg:text-4xl font-bold">
+            <h2
+              class="card-title fade-in-up text-primary lg:text-black text-2xl lg:text-4xl font-bold"
+            >
               Get Grocery News!
             </h2>
             <p class="flex-grow-0 lg:text-xl">
               Exclusive training tips, ticks, product deals and more.
             </p>
 
-            <div class="card-actions gap-5 w-full lg:w-fit justify-center lg:justify-start">
+            <div
+              class="card-actions gap-5 w-full lg:w-fit justify-center lg:justify-start"
+            >
               <input
                 type="text"
                 placeholder="Enter Email"
