--- a/index.html
+++ b/index.html
@@ -461,6 +461,65 @@
         </div>
       </section>
 
+<!-- FAQ Section -->
+<section class="mb-8 max-w-[1280px]">
+  <h2 class="lg:text-3xl text-2xl font-bold text-left ml-5 mt-16 lg:mt-16 lg:mb-5 text-primary">
+    Frequently Asked Questions
+  </h2>
+  <div class="hero">
+    <div class="hero-content flex-col lg:flex-row">
+      <!-- Accordion -->
+      <div class="space-y-5">
+        <div class="collapse collapse-arrow border">
+          <input type="radio" name="my-accordion-2" checked="checked" />
+          <div class="collapse-title text-xl font-medium">
+            What types of vegetables do you sell?
+          </div>
+          <div class="collapse-content">
+            <p>
+              We offer a wide variety of fresh vegetables, including leafy greens, root vegetables, seasonal produce, and exotic options to meet all your cooking needs.
+            </p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow border">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">
+            How do you ensure the freshness of your vegetables?
+          </div>
+          <div class="collapse-content">
+            <p>
+              Our vegetables are sourced daily from trusted local farms and suppliers, ensuring they reach your kitchen at peak freshness.
+            </p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow border">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">
+            Do you offer same-day delivery?
+          </div>
+          <div class="collapse-content">
+            <p>
+              Yes, we provide same-day delivery for orders placed before the cut-off time to ensure you get fresh produce when you need it.
+            </p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow border">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">
+            Can I return vegetables if I am not satisfied?
+          </div>
+          <div class="collapse-content">
+            <p>
+              Absolutely! If any product doesn’t meet your expectations, contact us within 24 hours for a hassle-free refund or replacement.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+      
       <!-- offer section -->
       <section class="max-w-full py-10 lg:py-16">
         <div class="hero">
@@ -532,7 +591,7 @@
 
     <footer class="">
       <!-- Subscribe section -->
-      <section class="px-4 -mb-[280px] lg:-mb-[200px] lg:max-w-[1320px]">
+      <section class="px-4 -mb-[280px] lg:-mb-[200px] lg:max-w-[1280px]">
         <div class="card lg:justify-center lg:py-10 lg:flex-row bg-secondary">
           <figure class="px-10 pt-10 lg:w-1/2">
             <img
